fixing extra space in the css.  Solution working on 85%

--- a/HTML & CSS/05 Position and Grid/04_Navigation-float/style.css
+++ b/HTML & CSS/05 Position and Grid/04_Navigation-float/style.css
@@ -10,8 +10,9 @@ body {
     padding: 10px;
 }
 
-.first, .second {
-    box-shadow: rgba(0, 0, 0, 0.25) ;
+.first,
+.second {
+    box-shadow: rgba(0, 0, 0, 0.25);
 }
 
 .second img {
@@ -21,19 +22,21 @@ body {
     padding: 5px;
 }
 
-h1, h3 {
-    font-family: Georgia,  serif;
+h1,
+h3 {
+    font-family: Georgia, serif;
     font-size: 1em;
 }
 
 blockquote {
-    font-family: Georgia,  serif;
+    font-family: Georgia, serif;
 }
+
 a {
     color: rgb(0, 102, 0);
 }
 
 img {
     background-color: rgb(255, 255, 255);
-    
+
 }
